--- a/PY_PROJECT/project/requirements.txt
+++ b/PY_PROJECT/project/requirements.txt
@@ -1,11 +1,114 @@
+airdrop-ng==1.1
+airgraph-ng==1.1
+appdirs==1.4.4
+arandr==0.1.10
+attrs==22.1.0
+autocommand==2.2.1
+Babel==2.9.1
+beautifulsoup4==4.11.1
+Brlapi==0.8.4
+btrfsutil==6.0.1
+cached-property==1.5.2
+cairocffi==1.4.0
+certifi==2022.9.24
+cffi==1.15.1
+chardet==3.0.4
+cloud-init==22.3.4
+configobj==5.1.0.dev0
 contourpy==1.0.6
+cryptography==3.4.8
 cycler==0.11.0
+Cython==0.29.32
+decorator==4.4.2
+defusedxml==0.7.1
+docopt==0.6.2
+docutils==0.16
+ebaysdk==2.1.5
 fonttools==4.38.0
+freezegun==0.3.15
+gevent==21.8.0
+greenlet==1.1.2
+httplib2==0.21.0
+idna==2.8
+importlib-metadata==5.0.0
+inflect==6.0.2
+isodate==0.6.1
+jaraco.context==4.1.2
+jaraco.functools==3.5.2
+jaraco.text==3.10.0
+Jinja2==2.11.3
+jsonpatch==1.32
+jsonpointer==2.3
+jsonschema==4.17.0
 kiwisolver==1.4.4
+libsass==0.18.0
+lit==14.0.6.dev0
+louis==3.23.0
+lxml==4.6.5
+MarkupSafe==1.1.0
 matplotlib==3.6.2
+more-itertools==9.0.0
+netifaces==0.11.0
+nftables==0.1
+nspektr==0.4.0
+num2words==0.5.6
 numpy==1.23.4
+oauthlib==3.2.2
+ofxparse==0.21
+ordered-set==4.1.0
 packaging==21.3
+pandas==1.5.1
+passlib==1.7.3
 Pillow==9.3.0
+ply==3.11
+polib==1.1.0
+protobuf==4.21.9
+psutil==5.6.7
+psycopg2==2.8.6
+pycairo==1.21.0
+pycparser==2.21
+pydantic==1.10.2
+pydot==1.4.1
+PyGObject==3.42.2
+pyOpenSSL==19.0.0
 pyparsing==3.0.9
+PyPDF2==1.26.0
+pyrsistent==0.19.2
+pyserial==3.4
 python-dateutil==2.8.2
+python-stdnum==1.13
+python-xlib==0.31
+pytz==2022.6
+pyusb==1.0.2
+pywal==3.3.0
+PyYAML==6.0
+qrcode==6.1
+qtile==0.22.1
+ranger-fm==1.9.3
+Reflector==2021.11.20.2.41.3
+reportlab==3.5.59
+requests==2.25.1
+requests-toolbelt==0.10.1
 six==1.16.0
+soupsieve==2.3.2.post1
+speedtest-cli==2.1.3
+team==1.0
+tomli==2.0.1
+trash-cli==0.22.8.27
+trove-classifiers==2022.10.19
+typing_extensions==4.4.0
+ueberzug==18.1.9
+urllib3==1.26.5
+validate==5.1.0.dev0
+validate-pyproject==0.10.1
+vobject==0.9.6.1
+Werkzeug==2.0.2
+wifite==2.6.5
+xcffib==0.12.1
+xlrd==1.2.0
+XlsxWriter==1.1.2
+xlwt==1.3.0
+zeep==3.4.0
+zipp==3.10.0
+zope.event==4.5.0
+zope.interface==5.5.1
