--- a/PY_PROJECT/project/Dockerfile
+++ b/PY_PROJECT/project/Dockerfile
@@ -1,10 +1,10 @@
 FROM python:3.8
 
-WORKDIR /project
-COPY requirements.txt /project/requirements.txt
+WORKDIR /app
+COPY requirements.txt /app/requirements.txt
 
-RUN pip install --no-cache-dir --upgrade --force-reinstall -r requirements.txt
+RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
-COPY ./ /project/
+COPY . /app/
 
 CMD bash -c "while true; do sleep 1; done"
