--- a/PY_PROJECT/project/requirements.txt
+++ b/PY_PROJECT/project/requirements.txt
@@ -1,13 +1,13 @@
-# airdrop-ng==1.1
-# airgraph-ng==1.1
+#airdrop-ng==1.1
+#airgraph-ng==1.1
 appdirs==1.4.4
-arandr==0.1.10
+#arandr==0.1.10
 attrs==22.1.0
 autocommand==2.2.1
 Babel==2.9.1
 beautifulsoup4==4.11.1
-Brlapi==0.8.4
-btrfsutil==6.0.1
+#Brlapi==0.8.4
+#btrfsutil==6.0.1
 cached-property==1.5.2
 cairocffi==1.4.0
 certifi==2022.9.24
